buttonsha tugri kadm

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <option>select</option>
             <option>select 1</option>
             <option>select 2</option>
-          </select> <br>  <br> <br>
+          </select> <br>  <br> <br> 
           
           </div>
           <div class="m4">
@@ -33,7 +33,7 @@
             <option>select</option>
             <option>select 1</option>
             <option>select 2</option>
-          </select> <br>  <br> <br>
+          </select> <br>  <br> 
            </div>
           <div class="mdiv">
             <p><input type="radio"./>Pursuing</p>
@@ -57,7 +57,7 @@
           </div>
           <div class="m7">
           <label for="">Your Website Or Blog :  </label>
-          <input type="text" value="http:/"><br> <br> <br>
+          <input type="url" value="http:/"><br> <br> <br>
           </div>
         </fieldset>
       </form>
